Feedback icon hidden until debugging of submission-script.js

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,7 +97,9 @@ header {
 .header__menu-list-item > svg:hover {
    color: rgb(250, 145, 48);
 }
-
+.hide-feedback {
+   display: none;
+}
 
 .tab-wrapper {
    display: flex;
