--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,12 +34,9 @@ input:focus, select:focus {
 body {
    display: flex;
    justify-content:center;
-   /* align-items: center; */
    flex-wrap: wrap;
-   /* height: 100vh; */
    height: 100%;
    min-height: 100vh;
-   /* margin: 25px 0; */
    padding-top: 25px;
    padding-bottom: 25px;
    background-color: #393939;
@@ -49,7 +46,6 @@ body {
    background-repeat: no-repeat, repeat;
    background-size: cover, 100px 100px;
    background-blend-mode: soft-light;
-   /* background-blend-mode: overlay, soft-light; */
    font-family: 'Roboto', sans-serif;
    overflow-x: scroll;
 }
@@ -79,7 +75,6 @@ header {
    width: 100%;
    height: 100%;
    padding: 15px 18px 15px 18px;
-   /* background-color: yellow; */
 }
 .header__menu-list {
    display: flex;
@@ -338,8 +333,12 @@ hr {
    color: #f6f6f6;
    background-color: rgba(72, 72, 72, 1);
 }
+
 #output-roll-size,
 #output-cut-price {
+   display: flex;
+   justify-content: flex-start;
+   flex-wrap: wrap;
    border: 1px solid grey;
    border-radius: 4px;
    margin-top: 20px;
@@ -349,13 +348,10 @@ hr {
    opacity: 0;
    transition: visibility 0s linear 0.5s, opacity 0s;
 }
-/* .fade-in-outputs {
-   visibility: visible;
-   opacity: 1;
-   transition: visibility 0s linear 0s, opacity 300ms;
-} */
+
 .output-title-wrapper {
    position: relative;
+   width: 100%;
    border-bottom: 3px solid rgb(168, 168, 168);
    margin-bottom: 25px;
 }
@@ -372,27 +368,66 @@ hr {
    font-weight: 600;
    margin-bottom: 5px;
 }
-.total-measure-unit-tag,
+.total-measure-unit-tag {
+   font-size: 0.8rem;
+   font-weight: 500;
+   /* margin-left: 5px; */
+   color: #333; 
+}
 .before-tax-tag {
-   font-size: 13px;
+   font-size: 0.5rem;
    font-weight: 500;
    margin-left: 5px;
+   color: #333;
 }
 /*For price calc result section*/
 .total-price-results {
-   font-size: 1.3em;
+   width: 60%;
+   margin-bottom: 5px;
+}
+/* 6ft wide is selected for total price results*/
+.full-width {
+   width: 100%;
+}
+.total-cuts-results {
    font-weight: 600;
-   margin-bottom: 5px;
 }
-.total-cuts-results,
-.total-lf-results,
+/* .total-cuts-results, */
 .total-sqyd-results {
-   font-size: 1em;
-   font-weight: bold;
+   width: 40%;
    margin-bottom: 5px;
 }
-
-
+.price-output {
+   font-size: 1.5em;
+   font-weight: bold;
+   color: #16d216;
+}
+.sqyd-output {
+   font-size: 1.5em;
+   font-weight: bold;
+}
+/* .total-cuts-output {
+   font-size: 1rem;
+   font-weight: 500;
+} */
+.total-lf-results {
+   font-weight: 600;
+   margin-bottom: 10px;
+}
+.total-cuts-lf-results {
+   width: 100%;
+   margin-bottom: 15px;
+}
+.cut-lf-output {
+   font-size: 0.55rem;
+   font-weight: 500;
+   float: right;
+}
+.cuts-output {
+   /* font-size: 1.2rem; */
+   font-weight: 600;
+   /* color: rgb(86, 109, 215); */
+}
 
 /* ### FORM 2 STYLING #################################
 ######################################################### */
@@ -452,10 +487,6 @@ hr {
  }
 /* End custom list counter and styling */
 
-
-/* old #cuts {
-   width: 100%;
-} */
 .cut-input-wrapper { /* Orderered List*/
    position: relative;
    display: flex;
@@ -465,12 +496,6 @@ hr {
    margin-bottom: 20px;
    transition:all 0.5s ease-in-out;
 }
-/* old .input-group2 label {
-   width: 40%;
-   font-weight: 500;
-   font-size: 15px;
-   
-} */
 
 .input-group2 input[type="number"] {
    width: 24%;
@@ -690,23 +715,24 @@ hr {
  .cull-tool-tip {
    color: #666;
  }
- .cull-tool-tip-txt {
+ /* .cull-tool-tip-txt {
    width: 100%;
    top: -72px;
    left: 0;
- }
+ } */
  /* Tooltip text */
 .cull-tool-tip .cull-tool-tip-txt {
    visibility: hidden;
-   width: auto;
+   width: 110%;
    background-color: #333;
    color: #fff;
    text-align: center;
    padding: 5px;
-   border-radius: 6px;
-   top: -70px;
+   border-radius: 5px;
    /* Position the tooltip text */
    position: absolute;
+   top: -90px;
+   right: -32px;
    z-index: 1;
  }
  .cull-tool-tip .cull-tool-tip-txt::before {
@@ -714,8 +740,8 @@ hr {
    border-left: 12px solid transparent;
    border-right: 12px solid transparent;
    border-top: 12px solid #333;
-   top: 65px;
-   left: 230px;
+   top: 83px;
+   left: 226px;
    width: 0px;
    height: 20px;
    display: block;
@@ -752,15 +778,17 @@ footer > p {
    height: 80vh;
    border-radius: 5px;
    padding: 20px;
-   border: 2px solid #4a4a4a;
+   border: 1px solid #4a4a4a;
    background-color: #f6f6f6;
    box-shadow: 0px 5px 30px 15px rgba(0,0,0,0.5);
    -webkit-box-shadow: 0px 5px 30px 15px rgba(0,0,0,0.5);
    -moz-box-shadow: 0px 5px 30px 15px rgba(0,0,0,0.5);
    transform: scale(0);
    overflow-x: hidden;
-   transition: all 0.7s cubic-bezier(0.68,-0.55,0.27,1.55);;
+   /* transition: all 0.7s cubic-bezier(0.68,-0.55,0.27,1.55); */
+   transition: all 0.3s ease-in-out;
 }
+
 .close-btn-wrapper {
    display: flex;
    justify-content: flex-end;
@@ -773,7 +801,7 @@ footer > p {
    color: grey;
    background: transparent;
    cursor: pointer;
-   transition: color 0.5s ease-in-out;
+   transition: color 0.3s ease-in-out;
 }
 #closeMenuBtn:hover {
    color: rgb(203, 39, 39);
@@ -908,17 +936,26 @@ footer > p {
    .feedback-form-submit-btn {
       width: 80%;
    }
+   /*  CALC ROLL QTY OUTPUT STYLING */
+   /* ============================================ */
+   #output-roll-size {
+      flex-direction: column;
+   }
+   .cut-lf-output {
+      font-size: 0.8rem;
+      margin-right: 66px;
+   }
    /* CULL TOOL TIP */
    /* ========================================= */
    .cull-tool-tip .cull-tool-tip-txt {
       visibility: hidden;
-      width: 50%;
+      width: 120%;
       background-color: #333;
       color: #fff;
       text-align: center;
       padding: 5px;
       border-radius: 6px;
-      top: -20px;
+      top: -45px;
       left: 265px;
       /* Position the tooltip text */
       position: absolute;
@@ -929,11 +966,9 @@ footer > p {
       border-top: 12px solid transparent;
       border-right: 12px solid #333;
       border-bottom: 12px solid transparent;
-      top: 23px;
+      top: 47px;
       left: -42px;
       width: 20px;
       height: 0px;
-      /* display: block;
-      position: absolute;  */
     }
 }
