--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -370,7 +370,7 @@ hr {
 .total-measure-unit-tag {
    font-size: 0.8rem;
    font-weight: 500;
-   /* margin-left: 5px; */
+   margin-left: 5px;
    color: #333; 
 }
 .before-tax-tag {
@@ -975,18 +975,23 @@ footer > p {
 
 /* Print Section Styling */
 .print-section {
+   width: 100%;
     margin-top: 20px;
     text-align: center;
 }
 
 .print-btn, .print-confirm-btn {
-    background-color: #0f68bc;
+    /* background-color: #0f68bc; */
+    background-color: #4187ca;
     color: white;
-    padding: 8px 16px;
+    width: 40%;
+    height: 45px;
+    padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 15px;
+    font-weight: 600;
 }
 
 .print-btn:hover, .print-confirm-btn:hover {
@@ -998,8 +1003,25 @@ footer > p {
 }
 
 #sku-input-section input {
+   width: 135px;
+   height: 45px;
     padding: 6px;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     border-radius: 4px;
-    width: 120px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 600;
+    color: #333;
+}
+
+#sku-input-section-cuts input {
+   width: 135px;
+   height: 45px;
+    padding: 6px;
+    /* border: 1px solid #ccc; */
+    border-radius: 4px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 600;
+    color: #333;
 }
