--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -132,7 +132,8 @@ hr {
 .form-heading {
    position: relative;
    margin-bottom: 25px;
-   border-bottom: 3px solid rgb(168, 168, 168);
+   /* border-bottom: 2px solid rgb(168, 168, 168); */
+   border-bottom: 2px solid rgba(247, 100, 2);
 } 
 .form-heading > p {
    position: relative;
@@ -140,7 +141,7 @@ hr {
    font-size: 1.5em;
    font-weight: bold;
    width: fit-content;
-   border-bottom: 3px solid rgba(247, 100, 2);
+   /* border-bottom: 3px solid rgba(247, 100, 2); */
 }
 .input-group {
    position: relative;
@@ -780,7 +781,7 @@ footer > p {
    border-radius: 5px;
    padding: 20px;
    border: 1px solid #4a4a4a;
-   background-color: #f6f6f6;
+   background-color: #fff;
    box-shadow: 0px 5px 30px 15px rgba(0,0,0,0.5);
    -webkit-box-shadow: 0px 5px 30px 15px rgba(0,0,0,0.5);
    -moz-box-shadow: 0px 5px 30px 15px rgba(0,0,0,0.5);
